syntax = "proto3";
package grpc_health;


message Message {
  string body = 1;
}

message IndiceName {
  string indicename = 1;
}

message ClusterInfo {
  string name = 1;
  string status = 2;
  string nodes = 3;
}

message IndiceInfo {
	string indicename = 1;
  string health = 2;
	string status = 3;
	string uuid = 4;
}

message ListIndices {
  string nbIndices = 1;
  repeated IndiceInfo indicelist = 2;
}

service ElasticService {
  rpc SayHello(Message) returns (Message) {}
  rpc GetClusterStatus(Message) returns (ClusterInfo) {}
  rpc GetIndiceStatus(IndiceName) returns (IndiceInfo) {}
  rpc GetIndicesList(Message) returns (ListIndices) {}
  rpc CreateIndexInCluster(IndiceName) returns (Message) {}
  rpc DeleteIndexInCluster(IndiceName) returns (Message) {}
}